refactored my arrays for cardDeck and added random, random not connected to array yet

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <script src="app.js"></script>
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body onload="build()">
 
-    
+    <button id="btnStartGame" onclick="startGame()">Start Game</button>
+
+    <div id="playingField" hidden>
+
+        <button>Hit</button>
+        <button>Stay</button>
+
+    </div>
     
 </body>
 </html>
