--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
     <div id="playingField" hidden>
 
-        <button>Hit</button>
+        <button onclick="hit()">Hit</button>
         <button>Stay</button>
 
     </div>
