tried to write if card is hearts or spade with if statements but did not work

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,18 @@
 
     <div id="playingField" hidden>
 
-        <button onclick="hit()">Hit</button>
-        <button>Stay</button>
+        <h1>Computer:</h1>
+        <p></p>
+        <br>
+
+        <h1>You:</h1>
+
+        <p id="playerCards"></p>
+
+        <div id="btnPlay">
+            <button onclick="hit()">Hit</button>
+            <button>Stay</button>
+        </div>
 
     </div>
     
