fixed switch statements and text for win or lose condition

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <script src="app.js"></script>
     <title>Home</title>
 </head>
-<body>
+<body onload="build()">
 
     <button id="btnStartGame" onclick="startGame()">Start Game</button>
 
